# lattirust

./: .gitmodules  .pre-commit-config.yaml  BLOGPOST.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  blogpost.md  rust-toolchain.toml
commitment/: Cargo.toml  main.rs  readme.md  xxx.rs
commitment/openfhe/: lib.rs  openfhe-dgs.h
commitment/src/: bfv.rs  lattirust.code-workspace  lib.rs  main.rs  ppk.rs  tests.rs
commitment/src/bfv/: ciphertext.rs  mod.rs  plaintext.rs  public_key.rs  secret_key.rs  test.rs  util.rs
commitment/src/ppk/: mod.rs  nizk.rs  ppk.rs  prover.rs  shared.rs  test.rs  util.rs  verifier.rs
donut/: Cargo.toml
hax/: Cargo.toml
labrador/: Cargo.toml
labrador/src/: common_reference_string.rs  iopattern.rs  lib.rs  prover.rs  shared.rs  test.rs  util.rs  verifier.rs
labrador/src/binary_r1cs/: mod.rs  prover.rs  test.rs  util.rs  verifier.rs
labrador/src/r1cs/: prover.rs  util.rs
lattice-estimator/: Cargo.toml  build.rs
lattice-estimator/src/: errors.rs  lib.rs  msis.rs  msis2.rs  my_constants.rs  norms.rs  reduction.rs  sage_util.rs  sis.py  sis.rs  utils.rs
lattice-estimator/src/basis/: mod.rs
lattice-estimator/src/isisf/: mod.rs
lattice-estimator/src/kmsis/: mod.rs
lattice-estimator/src/krisis/: mod.rs
lattice-estimator/src/ksis/: mod.rs
lattice-estimator/src/msis/: lattice_estimator.rs  mod.rs  security_estimates.rs
lattice-estimator/src/onemoreISIS/: mod.rs
lattice-estimator/src/prisis/: mod.rs
lattice-estimator/src/rsis/: mod.rs
lattice-estimator/src/vsis/: mod.rs
lattirust-arithmetic/: Cargo.toml
lattirust-arithmetic/src/: balanced_decomposition.rs  gpu_context.rs  lib.rs  ntt.rs  partial_ntt.rs  poly_ring.rs  pow2_cyclotomic_poly_ring.rs  pow2_cyclotomic_poly_ring_ntt.rs  ring.rs  traits.rs
lattirust-arithmetic/src/challenge_set/: binary.rs  labrador_challenge_set.rs  latticefold_challenge_set.rs  mod.rs  ppk_challenge_set.rs  ternary.rs  weighted_ternary.rs  z_q.rs
lattirust-arithmetic/src/decomposition/: approximate_balanced_decomposition.rs  balanced_decomposition.rs  decomposition.rs  mod.rs
lattirust-arithmetic/src/linear_algebra/: generic_matrix.rs  inner_products.rs  matrix.rs  mod.rs  serialization.rs  sparse_matrix.rs  symmetric_matrix.rs  vector.rs
lattirust-arithmetic/src/mle/: dense.rs  mod.rs  sparse.rs
lattirust-arithmetic/src/nimue/: arthur.rs  iopattern.rs  merlin.rs  mod.rs  serialization.rs  traits.rs
lattirust-arithmetic/src/polynomials/: errors.rs  mod.rs  multilinear_polynomial.rs  util.rs  virtual_polynomial.rs
lattirust-arithmetic/src/ring/: cyclotomic_poly_ring_splitted_ntt.rs  f_p.rs  mod.rs  ntt.rs  poly_ring.rs  pow2_cyclotomic_poly_ring.rs  pow2_cyclotomic_poly_ring_ntt.rs  pow2_cyclotomic_poly_ring_ntt_crt.rs  powp_cyclotomic_poly_ring.rs  representatives.rs  util.rs  z_2.rs  z_2_128.rs  z_2_64.rs  z_2_k.rs  z_p_gold.rs  z_p_stark.rs  z_pow_2.rs  z_q.rs  z_q_signed_representative.rs
linear_algebra/: Cargo.toml
linear_algebra/src/: generic_matrix.rs  lib.rs  matrix.rs  ops.rs  serialization.rs  sparse_matrix.rs  symmetric_matrix.rs  vector.rs
lova/: Cargo.toml  lova-parameters.ipynb
lova/benches/: lova.rs  util.rs
lova/criterion/m5.8xlarge/criterion/lova/1048576/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/262144/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/65536/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/prover/1048576/base/: estimates.json  sample.json
lova/criterion/m5.8xlarge/criterion/lova/prover/1048576/new/: benchmark.json  tukey.json
lova/criterion/m5.8xlarge/criterion/lova/prover/1048576/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/prover/262144/base/: benchmark.json  estimates.json  sample.json
lova/criterion/m5.8xlarge/criterion/lova/prover/262144/new/: tukey.json
lova/criterion/m5.8xlarge/criterion/lova/prover/262144/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/prover/65536/base/: benchmark.json  estimates.json  tukey.json
lova/criterion/m5.8xlarge/criterion/lova/prover/65536/new/: sample.json
lova/criterion/m5.8xlarge/criterion/lova/prover/65536/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/prover/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/report/: index.html
lova/criterion/m5.8xlarge/criterion/lova/verifier/1048576/base/: benchmark.json  sample.json
lova/criterion/m5.8xlarge/criterion/lova/verifier/report/: index.html
lova/criterion/m5.8xlarge/criterion/report/: index.html
lova/src/: lib.rs  prover.rs  test.rs  util.rs  verifier.rs
lova/src/examples/: main.rs
lova/src/examples/util/: .envrc  Cargo.toml  config.rs
poly/: Cargo.toml
poly/src/: lib.rs
poly/src/mle/: dense.rs  mod.rs  sparse.rs
poly/src/polynomials/: errors.rs  mod.rs  multilinear_polynomial.rs  util.rs  virtual_polynomial.rs
relations/: Cargo.toml
relations/src/: ajtai_cm.rs  lib.rs  principal_relation.rs  r1cs.rs  reduction.rs  traits.rs
ring/: Cargo.toml
ring/src/: balanced_decomposition.rs  cyclotomic_poly_ring_splitted_ntt.rs  lib.rs  ntt.rs  partial_ntt.rs  poly_ring.rs  pow2_cyclotomic_poly_ring.rs  pow2_cyclotomic_poly_ring_ntt.rs  representatives.rs  ring.rs  ring_config.rs  serde.rs  traits.rs  z_2_128.rs  z_2_64.rs  z_q.rs
ring/src/balanced_decomposition/: convertible_ring.rs  fq_convertible.rs  mod.rs  representatives.rs
ring/src/cyclotomic_ring/: coeff_form.rs  crt.rs  flatten.rs  mod.rs  ntt_form.rs  ring_config.rs
ring/src/cyclotomic_ring/models/: mod.rs
ring/src/cyclotomic_ring/models/babybear/: fq9.rs  mod.rs  ntt.rs
ring/src/cyclotomic_ring/models/frog_ring/: mod.rs  ntt.rs  utils.rs
ring/src/cyclotomic_ring/models/goldilocks/: mod.rs  ntt.rs  utils.rs
ring/src/cyclotomic_ring/models/pow2_debug/: coeff_form.rs  mod.rs  ntt.rs  ntt_form.rs
ring/src/cyclotomic_ring/models/stark_prime/: decomposition.rs  mod.rs  ntt.rs
ring/src/goldilocks/: mod.rs  ntt.rs
ring/src/zn/: mod.rs  z_q.rs
src/: lib.rs  (+1 more)
sumcheck/: Cargo.toml
sumcheck/src/: boolean_hypercube.rs  lib.rs
(+126 files in other folders)
