workspace = { members = ["src/lattice-estimator"] }
[package]
name = "ark-lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.5"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-relations = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.2"
num-traits = "0.2.17"
zeroize = "1.7.0"
generic-matrix = "0.2.2"
rand = "0.8.5"
delegate = "0.12.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nimue = "0.0.1-beta1"
delegate-attr = "0.3.0"
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.13"
serde_json = "1.0.108"
bincode = "1.3.3"
serde_with = "3.4.0"
bitter = "0.6.1"
anyhow = "1.0.79"
rayon = "1.8.0"
log = "0.4.20"
lattice-estimator = { path = "src/lattice-estimator" }