[workspace]
members = [
    "linear_algebra",
    "ring",
    "poly"
]
resolver = "2"

[workspace.dependencies]
lattirust-ring = { path = "./ring" }
lattirust-poly = { path = "./poly" }
lattirust-linear-algebra = { path = "./linear_algebra" }
ark-ff = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = "0.4.0"
ark-poly = "0.4.2"
bincode = "1.3.3"
bitter = "0.6.2"
delegate = "0.12.0"
delegate-attr = "0.3.0"
derive_more = "0.99.17"
nalgebra = { version = "0.32.5", features = ["serde-serialize", "rayon"] }
nalgebra-sparse = "0.9.0"
nimue = { version = "0.0.1", git = "https://github.com/cknabs/nimue", branch = "absorb_unchecked-non-recursive" }
num-traits = "0.2.18"
rayon = "1.10.0"
rounded-div = "0.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
zeroize = "1.7.0"
num-bigint = "0.4.4"
rand = "0.8.5"
displaydoc = "0.2.5"
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "sponge",
] }
thiserror = "1.0.63"

[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs-header.html"]