[workspace]
members = [
    "linear_algebra",
    "ring",
    "poly"
]
resolver = "2"

[workspace.dependencies]
lattirust-ring = { path = "./ring", default-features = false }
lattirust-poly = { path = "./poly", default-features = false }
lattirust-linear-algebra = { path = "./linear_algebra", default-features = false }
ark-ff = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = { version = "0.4", default-features = false }
ark-poly = "0.4"
bincode = "1.3"
bitter = "0.6"
delegate = "0.13"
delegate-attr = "0.3"
derive_more = "0.99"
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.7", default-features = false }
zeroize = "1.7"
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
rand = { version = "0.8", default-features = false }
displaydoc = { version = "0.2", default-features = false }

[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs-header.html"]
