[package]
name = "commitments"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
lattirust-util = { version = "0.0.1-alpha", path = "../lattirust-util" }
relations = { version = "0.0.1-alpha", path = "../relations" }
fhe = "0.1.0-beta.8"
fhe-traits = "0.1.0-beta.8"
rand = "0.8.5"
rand_distr = "0.4.3"
ark-ff = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = "0.4.0"