[package]
name = "lattice-estimator"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
num-bigint = "0.4.4"
num-traits = "0.2.18"
roots = "0.0.8"
statrs = "0.18.0"
polynomial = "0.2.6"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.4"


# pyo3 = { version = "0.20.2", features = ["auto-initialize"] }