[package]
name = "lattice-estimator"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
num-bigint = "0.4.6"
num-traits = "0.2.19"
# pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
