[package]
name = "lattirust-arithmetic"
version = "0.0.1-alpha"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-std = "0.5.0"
bincode = "1.3.3"
bitter = "0.7.0"
const-primes = "0.10.3"
delegate = "0.13.1"
delegate-attr = "0.3.0"
derive_more = { version = "2.0.1", features = ["full"] }
derivative = "2.2.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize", "rayon"] }
nalgebra-sparse = "0.10.0"
nimue = "0.1.0"
num-traits = "0.2.19"
paste = "1.0.15"
rayon = "1.10.0"
rounded-div = "0.1.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
zeroize = "1.8.1"
num-bigint = "0.4.6"
itertools = "0.14.0"
i256 = "0.2.2"
rand = "0.9.0"
log = "0.4.22"
rand = "0.8.5"
displaydoc = "0.2.5"
