[package]
name = "lattirust-linear-algebra"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
num-integer = { workspace = true }

rayon = { version = "1.10", optional = true }

[features]
default = [ "std" ]
std = [ "ark-std/std", "rand/std", "nalgebra/std", "nalgebra/serde-serialize" ]
parallel = [ "std", "rayon", "nalgebra/rayon" ]
no-std-serialize = [ "nalgebra/serde-serialize-no-std" ]
