[package]
name = "lova"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
lattice-estimator = { version = "0.0.1-alpha", path = "../lattice-estimator" }
lattirust-util = { version = "0.0.1-alpha", path = "../lattirust-util" }
relations = { version = "0.0.1-alpha", path = "../relations" }
anyhow = "1.0.95"
ark-std = "0.5.0"
ark-serialize = "0.5.0"
derive_more = "1.0.0"
env_logger = "0.11.5"
humansize = "2.1.3"
log = "0.4.22"
nimue = "0.1.0"
serde = { version = "1.0.215", features = ["derive"] }
num-traits = "0.2.19"
num-bigint = "0.4.6"
rayon = "1.10.0"
tracing = { version = "0.1.40", features = ["tracing-attributes"] }
tui-logger = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"], git = "https://github.com/vlovich/criterion.rs", branch = "fix-plotting-nan" }

[[bench]]
name = "lova"
harness = false