[package]
name = "lattirust-poly"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattirust-linear-algebra = { workspace = true }
lattirust-ring = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
displaydoc = { workspace = true }
thiserror = { workspace = true }

[features]
parallel = []
