[package]
name = "lattirust-poly"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattirust-linear-algebra = { workspace = true }
lattirust-ring = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
displaydoc = { workspace = true }
hashbrown = "0.15"
rand = { workspace = true }
rayon = { version = "1.10", optional = true }
thiserror = { version = "2", default-features = false }

[features]
default = [ "std" ]
std = [ "lattirust-ring/std" ]
parallel = [ "std", "rayon" ]
