[package]
name = "relations"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
ark-std = "0.4.0"
nimue = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] }