[package]
name = "relations"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0" #Remove
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
lattice-estimator = { version = "0.0.1-alpha", path = "../lattice-estimator" }
ark-std = "0.4.0"
nimue = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.22"
num-traits = "0.2.19"
num-bigint = "0.4.0"