[package]
name = "relations"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-relations = "0.5.0"
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
ark-std = "0.5.0"
nimue = "0.1.0"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
num-traits = "0.2.19"
num-bigint = "0.4.6"
anyhow = "1.0.95"
derive_more = "1.0.0"
