[package]
name = "lattirust-ring"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattirust-linear-algebra = { workspace = true }
ark-crypto-primitives = { version = "0.4", default-features = false, features = [
    "sponge",
] }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
zeroize = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
num-traits = { version = "0.2", default-features = false }
rayon = { version = "1.10", optional = true }

[features]
default = [ "std" ]
std = [ "lattirust-linear-algebra/std" ]
parallel = [ "std", "rayon", "lattirust-linear-algebra/parallel" ]

[dev-dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
