[package]
name = "sumcheck"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.5.0"
lattirust-arithmetic = { version = "0.0.1-alpha", path = "../lattirust-arithmetic" }
num-traits = "0.2.19"